# option

./: .bumpversion.cfg  .gitignore  .pylintrc  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  Makefile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: docs.yml  option-package.yml  python-package.yml
.junie/: guidelines.md
doc_src/: api.rst  conf.py  index.rst  option.option_.rst  option.result.rst  option.rst  option.types_.rst
doc_src/_static/: .gitkeep
doc_src/_templates/: _index.html  switcher.html
docs/: conf.py
src/_dev/: __init__.py  docs.py  lint.py  scripts.py  test.py
src/option/: __init__.py  option_.py  result.py  types_.py
tests/: __init__.py  conftest.py  test_flatmap.py  test_option.py  test_option_.py  test_result.py
