[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[project]
name = "option"
version = "2.1.1"
description = "Rust like Option and Result types in Python"
authors = [
    { name = "Peijun Ma", email = "peijun.ma@protonmail.com" },
    { name = "Michael Cummings", email = "mgcummings@yahoo.com" }
]
requires-python = ">=3.12,<3.14"
readme = "README.md"
license = "MIT"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
]
dependencies = []

[project.urls]
Homepage = "https://mat1g3r.github.io/option/"
Repository = "https://github.com/Dragonrun1/option"

[dependency-groups]
dev = [
    "bump2version>=1.0.1",
    "mypy>=1.18.1",
    "pylint>=3.3.8",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.13.0",
    "sphinx>=8.2.3",
    "ty>=0.0.1a20",
]


[tool.mypy]
strict = true
show_column_numbers = true
show_error_codes = true

[tool.pytest.ini_options]
addopts = "--doctest-modules -vvv"
testpaths = ["tests/"]

[tool.ruff]
fix = true
line-length = 80
output-format = "grouped"
required-version = ">=0.13.0,<1.0"
src = ["src/*", "tests/*"]
exclude = ["docs/*"]

[tool.ruff.format]
docstring-code-format = true
exclude = ["*.pyi"]

[tool.ruff.lint]
extend-select = ["D", "E", "I", "N", "R", "W"]
ignore = ["D205"]

[tool.ruff.lint.pep8-naming]
extend-ignore-names = ["Err", "NONE", "Ok",  "Some"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D103"]

[tool.ruff.lint.pydocstyle]
convention = "google"
