[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[project]
name = "option"
version = "2.1.1"
description = "Rust like Option and Result types in Python"
authors = [
    { name = "Peijun Ma", email = "peijun.ma@protonmail.com" },
    { name = "Michael Cummings", email = "mgcummings@yahoo.com" }
]
requires-python = ">=3.12,<3.14"
readme = "README.md"
license = "MIT"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
]
dependencies = []

[project.urls]
Homepage = "https://Dragonrun1.github.io/option/"
Repository = "https://github.com/Dragonrun1/option"

[project.scripts]
ci-ghp = "_dev.ci:gh_pages"
dev-test = "_dev.test:test_main"
dev-docs = "_dev.docs:docs_main"
dev-lint = "_dev.lint:lint_main"

[dependency-groups]
dev = [
    "bump2version>=1.0.1",
    { include-group = "docs" },
    { include-group = "lint" },
    { include-group = "test" },
]
docs = [
    "gitpython>=3.1.45",
    "sphinx>=8.2.3",
    "sphinx-multiversion>=0.2.4",
]

lint = [
    "mypy>=1.18.2",
    "pylint>=3.3.8",
    "pylint-per-file-ignores>=2.0.3",
    "ruff>=0.13.1",
    "ty>=0.0.1a21",
]

test = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "xdoctest>=1.3.0",
]

[tool.mypy]
strict = true
show_column_numbers = true
show_error_codes = true

[tool.pylint]
allow-wildcard-with-all = true
good-names = ["_", "__", "db", "Err", "e", "ex", "f", "i", "j", "k", "NONE", "Ok", "Run", "Some", "s", "ui"]
ignore = ["resources", "_dev"]
include-naming-hint = true
jobs = 0
max-args = 6
output-format = "github"
overgeneral-exceptions = ["builtins.Exception"]

[tool.pylint.main]
load-plugins = [
    "pylint_per_file_ignores"
]

[tool.pylint."messages control"]
per-file-ignores = [
    "tests/*:missing-module-docstring,missing-function-docstring"
]

[tool.pytest.ini_options]
addopts = [
    "--cov",
    "--cov-branch",
    "--cov-report=term",
    "--cov-report=xml:coverage.xml",
    "--doctest-modules",
    "--xdoctest",
    "-vvv"
]
testpaths = ["src/option/", "tests/"]

[tool.ruff]
fix = true
line-length = 80
output-format = "grouped"
required-version = ">=0.13.0,<1.0"
src = ["src/*", "tests/*"]
exclude = ["doc_src/*"]

[tool.ruff.format]
docstring-code-format = true
exclude = ["*.pyi"]

[tool.ruff.lint]
extend-select = ["D", "E", "I", "N", "R", "W"]
ignore = ["D105", "D205"]

[tool.ruff.lint.pep8-naming]
extend-ignore-names = ["Err", "NONE", "Ok", "Some"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D103"]

[tool.ruff.lint.pydocstyle]
convention = "google"
